[tool.poetry]
name = "lesson-10-1"
version = "0.1.0"
description = ""
authors = ["Anastasia <antipinaanastasia0112@gmail.com>"]
readme = "README.md"
packages = [{include = "lesson_10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
